@@ -1,6 +1,7 @@
 #!/usr/local/bin/pike -M/Library/WebServer/Documents/scriptrunner
 
 constant my_version = "0.1";
+#define RUN_THREADED
 
 
 string logfile_path = "/tmp/scriptrunner.log";
@@ -12,6 +13,12 @@ mapping compiled_scripts = ([]);
 int main(int argc, array(string) argv)
 {
   int sock;
+
+  write("ScriptRunner " + my_version + " starting.\n");
+
+#ifdef RUN_THREADED
+  write("Running in threaded mode.\n");
+#endif
  
   add_constant("RequestID", .RequestID);
 
@@ -19,16 +26,31 @@ int main(int argc, array(string) argv)
     logfile=Stdio.File(logfile_path, "rwac");
 
   Stdio.File f = Stdio.stdin.dup();
-  
+#ifdef RUN_THREADED
 	for (int i = 0; i < 8; i++) {
 		Thread.Thread(request_loop, f->query_fd(), i);
 	}
 	return (-1);
+#else 
+	request_loop(f->query_fd(),0);
+#endif
 }
 
 void request_loop(int sock, int id)
 {
+        String.Buffer response = String.Buffer();
+
+#ifdef RUN_THREADED
+        Thread.Mutex lock;
+	Thread.MutexKey key;
+
+        lock = Thread.Mutex();
+        key = lock->lock();
+#endif
 	object request = Public.Web.FCGI.FCGI(sock);
+#ifdef RUN_THREADED
+        key = 0;
+#endif
 
         do{
 		request->accept();
@@ -36,8 +58,22 @@ void request_loop(int sock, int id)
                 object request_id;
                 mixed e;
 
+                if(catch(request_id = ((program)"RequestID")(request)))
+                {
+#ifdef RUN_THREADED
+                  key = lock->lock();
+#endif
+                  request->write("Status: 500 Server Error\r\n");
+                  request->write("Content-type: text/html\r\n\r\n");
+                  request->write("<h1>Error 500: Internal Server Error</h1>");
+                  request->write("The server was unable to parse your request.\n");
+                  request->finish();
+#ifdef RUN_THREADED
+                  key = 0;
+#endif
+                }
+
                 e = catch {
-                request_id = ((program)"RequestID")(request);
 
                 // do we have a script file passed?
                 if(request_id->misc->path_info && 
@@ -47,9 +83,8 @@ void request_loop(int sock, int id)
                   s = get_script(request_id->misc->path_translated, request_id);
                   if(stringp(s))
                   {
-                    request->write("Content-type: text/html\r\n\r\n");
-                    request->write("<h1>Compile Error</h1><pre>" + s + "</pre>");
-                    request->finish(); 
+                    request_id->response_write_and_finish("Content-type: text/html\r\n\r\n"
+                                   "<h1>Compile Error</h1><pre>" + s + "</pre>");
                     return;
                   }
 		     log("running script\n");
@@ -67,60 +102,61 @@ void request_loop(int sock, int id)
                           if(!retval->type)
                             retval->type = "text/html";
 
-                          if(retval->_headers["content-type"]);
-                          else
-                          request->write("Content-type: %s\r\n", retval->type);
-                            request->write("Status: %d\r\n", retval->error);
+                          response+=sprintf("Status: %d\r\n", retval->error);
+
+                          if(retval->_headers["content-type"]) ; // DO NOTHING!
+                          else 
+                            response+=sprintf("Content-type: %s\r\n", retval->type);
 
                           foreach(retval->_headers; string hname; string hvalue)
-                            request->write("%s: %s\r\n", String.capitalize(hname), hvalue);
+                            response+=sprintf("%s: %s\r\n", String.capitalize(hname), hvalue);
 
-                          request->write("\r\n");
+                          response+="\r\n";
 
                           // TODO: don't think we can get it all in one call.
                           if(objectp(retval->data))
-                            request->write(retval->data->read());
+                            response+=retval->data->read();
                           else if(retval->data)
-                            request->write(retval->data);
+                            response+=retval->data;
 
                         } 
                         else error("Invalid return value from parse().\n");
                      }
                      else
                      {
-                        request->write("Content-type: text/html\r\n\r\n");
-                        request->write(retval);
+                        response+="Content-type: text/html\r\n\r\n";
+                        response+=retval;
                      }
                 }
                 // no, then just print info.
                 else
                 {
-  		  request->write("Content-type: text/html\r\n\r\n");
-                  request->write("<h1>Pike ScriptRunner v" + my_version + "</h1>\n");
-		  request->write("Hello world, this is page (%O) request #%d generated by thread %d\n", request_id->not_query, requests, id);
-                  request->write("<p><b>Pike Info:</b>\n");
-                  request->write("<pre>\n%s\n</pre>\n", version());
-                  request->write("<b>Request Info:</b>\n");
-		  request->write("<pre>\nID: %O\n</pre>", 
+  		  response+="Content-type: text/html\r\n\r\n";
+                  response+="<h1>Pike ScriptRunner v" + my_version + "</h1>\n";
+		  response+=sprintf("Hello world, this is page (%O) request #%d generated by thread %d\n", request_id->not_query, requests, id);
+                  response+="<p><b>Pike Info:</b>\n";
+                  response+=sprintf("<pre>\n%s\n</pre>\n", version());
+                  response+="<b>Request Info:</b>\n";
+		  response+=sprintf("<pre>\nID: %O\n</pre>", 
                     mkmapping(indices(request_id), values(request_id)));
                 }
 
-                };
+              };
 
-                  if(e)
-                  {
-                     if(objectp(e))
-                       log("got an error: %s\n", e->describe());
-                     else
-                       log("got an error: %O\n", e);
-                     request->write("Content-type: text/html\r\n\r\n");
-                     request->write("<h1>\n%s\n</h1>", describe_error(e)); 
-                     request->write("<pre>\n%s\n</pre>", describe_backtrace(e)); 
-                   request->finish();
-                  }
+              if(e)
+              {
+                if(objectp(e))
+                  log("got an error: %s\n", e->describe());
+                else
+                  log("got an error: %O\n", e);
+                response+="Content-type: text/html\r\n\r\n";
+                response+=sprintf("<h1>\n%s\n</h1>", describe_error(e)); 
+                response+=sprintf("<pre>\n%s\n</pre>", describe_backtrace(e)); 
+              }
 
+              request_id->response_write_and_finish(response->get());
 
-		log("request finished\n");
+              log("request finished\n");
                 
 
 	} while(!shutdown);
